--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     </head>
 <body>
+  <img src="https://avatars.githubusercontent.com/u/95077252?v=4">
 <h1>I'm a header 1!</h1>
   Hello there, awesome person!
 </body>
