--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     </head>
 <body>
   <img src="https://avatars.githubusercontent.com/u/95077252?v=4">
+  <ol>
+
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Ordered list</li>
+
+</ol>
+  <ul>
+
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Unordered list</li>
+
+</ul>
 <h1>I'm a header 1!</h1>
   Hello there, awesome person!
 </body>
