--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <li>Unordered list</li>
 
 </ul>
+  <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 <h1>I'm a header 1!</h1>
   Hello there, awesome person!
 </body>
